# rust-service-template

./: Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
src/: lib.rs  service_state.rs
src/config/: mod.rs  service_config.rs
src/result/: mod.rs
src/result/response/: error.rs  mod.rs
src/routes/: health.rs
src/routes/api/: mod.rs
src/routes/api/v1/: hello.rs
src/routes/api/v1/hello/: mod.rs
src/routes/api/v1/hello/dto/: mod.rs
tests/: hello_test.rs
tests/common/: prelude.rs
tests/common/util/: mod.rs  test_container.rs
