[package]
name = "svc_template"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "svc_template"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.50", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.rust]
unused_imports = "deny"

[lints.clippy]
disallowed_macros = "deny"
